social 0.2.7 - add friend template was added

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "requirejs": "~2.1.22",
     "backbone": "~1.2.3",
     "jquery": "~2.2.0",
-    "text": "~2.0.14"
+    "text": "~2.0.14",
+    "moment": "~2.11.1"
   }
 }
